Updated page Preferences Editor/bg

--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -64,10 +64,10 @@
 <tr>
 <td><b>&#1057;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072; &#1084;&#1077;&#1088;&#1085;&#1080; &#1077;&#1076;&#1080;&#1085;&#1080;&#1094;&#1080; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</b>
 </td>
-<td>&#1057;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072; &#1084;&#1077;&#1088;&#1085;&#1080; &#1077;&#1076;&#1080;&#1085;&#1080;&#1094;&#1080; &#1079;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1095;&#1072;&#1089;&#1090;&#1080; &#1085;&#1072; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086;. <a href="../index.php?title=Template;%D0%92%D0%B5%D1%80%D1%81%D0%B8%D1%8F&amp;action=edit&amp;redlink=1.html" class="new" title="Template:&#1042;&#1077;&#1088;&#1089;&#1080;&#1103; (page does not exist)">Template:&#1042;&#1077;&#1088;&#1089;&#1080;&#1103;</a>: &#1048;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1089;&#1077; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1079;&#1072; <a href="../Std_ProjectInfo.html" title="Std ProjectInfo">&#1057;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072; &#1084;&#1077;&#1088;&#1085;&#1080; &#1077;&#1076;&#1080;&#1085;&#1080;&#1094;&#1080; &#1085;&#1072; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;</a> &#1085;&#1072; &#1085;&#1086;&#1074;&#1080; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;. &#1057;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072; &#1085;&#1072; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;&#1103; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090; &#1086;&#1090;&#1084;&#1077;&#1085;&#1103; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072; &#1079;&#1072; &#1077;&#1076;&#1080;&#1085;&#1080;&#1094;&#1072; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;, &#1086;&#1089;&#1074;&#1077;&#1085; &#1072;&#1082;&#1086; &#1085;&#1077; &#1077; &#1086;&#1090;&#1084;&#1077;&#1090;&#1085;&#1072;&#1090;&#1072; &#1089;&#1083;&#1077;&#1076;&#1074;&#1072;&#1097;&#1072;&#1090;&#1072; &#1086;&#1087;&#1094;&#1080;&#1103;.
+<td>&#1057;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072; &#1084;&#1077;&#1088;&#1085;&#1080; &#1077;&#1076;&#1080;&#1085;&#1080;&#1094;&#1080; &#1079;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1095;&#1072;&#1089;&#1090;&#1080; &#1085;&#1072; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: &#1048;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1089;&#1077; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1079;&#1072; <a href="../Std_ProjectInfo.html" title="Std ProjectInfo">&#1057;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072; &#1084;&#1077;&#1088;&#1085;&#1080; &#1077;&#1076;&#1080;&#1085;&#1080;&#1094;&#1080; &#1085;&#1072; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;</a> &#1085;&#1072; &#1085;&#1086;&#1074;&#1080; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;. &#1057;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072; &#1085;&#1072; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;&#1103; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090; &#1086;&#1090;&#1084;&#1077;&#1085;&#1103; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072; &#1079;&#1072; &#1077;&#1076;&#1080;&#1085;&#1080;&#1094;&#1072; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;, &#1086;&#1089;&#1074;&#1077;&#1085; &#1072;&#1082;&#1086; &#1085;&#1077; &#1077; &#1086;&#1090;&#1084;&#1077;&#1090;&#1085;&#1072;&#1090;&#1072; &#1089;&#1083;&#1077;&#1076;&#1074;&#1072;&#1097;&#1072;&#1090;&#1072; &#1086;&#1087;&#1094;&#1080;&#1103;.
 </td></tr>
 <tr>
-<td><b>&#1048;&#1075;&#1085;&#1086;&#1088;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072; &#1077;&#1076;&#1080;&#1085;&#1080;&#1094;&#1080; &#1085;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; &#1080; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1090;&#1072;&#1079;&#1080; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</b> <a href="../index.php?title=Template;%D0%92%D0%B5%D1%80%D1%81%D0%B8%D1%8F&amp;action=edit&amp;redlink=1.html" class="new" title="Template:&#1042;&#1077;&#1088;&#1089;&#1080;&#1103; (page does not exist)">Template:&#1042;&#1077;&#1088;&#1089;&#1080;&#1103;</a>
+<td><b>&#1048;&#1075;&#1085;&#1086;&#1088;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072; &#1077;&#1076;&#1080;&#1085;&#1080;&#1094;&#1080; &#1085;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; &#1080; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1090;&#1072;&#1079;&#1080; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</b> <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </td>
 <td>&#1040;&#1082;&#1086; &#1089;&#1077; &#1074;&#1082;&#1083;&#1102;&#1095;&#1080;, &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072; &#1084;&#1077;&#1088;&#1085;&#1080; &#1077;&#1076;&#1080;&#1085;&#1080;&#1094;&#1080; &#1085;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; &#1089;&#1077; &#1080;&#1075;&#1085;&#1086;&#1088;&#1080;&#1088;&#1072; &#1080; &#1085;&#1077; &#1086;&#1090;&#1084;&#1077;&#1085;&#1103; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072; &#1077;&#1076;&#1080;&#1085;&#1080;&#1094;&#1080; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;.
 </td></tr>
@@ -1242,15 +1242,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126140244
+Cached time: 20260126140514
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.214 seconds
-Real time usage: 0.271 seconds
-Preprocessor visited node count: 2463/1000000
-Post&#8208;expand include size: 25072/2097152 bytes
-Template argument size: 8491/2097152 bytes
+CPU time usage: 0.212 seconds
+Real time usage: 0.279 seconds
+Preprocessor visited node count: 2473/1000000
+Post&#8208;expand include size: 25174/2097152 bytes
+Template argument size: 8503/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1258,19 +1258,19 @@ Unstrip post&#8208;expand size: 4109/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.647      1 -total
- 15.59%    7.115    228 Template:MenuCommand
- 12.77%    5.830      1 Template:Userdocnavi/bg
-  8.27%    3.776      3 Template:PropertyView
-  7.17%    3.272     11 Template:Value
-  5.84%    2.666     39 Template:Version
-  5.10%    2.326      1 Template:Navigation_menu_2
-  4.70%    2.145      2 Template:Docnav
-  4.33%    1.976      3 Template:Variable
-  3.26%    1.487      7 Template:KEY
+100.00%   54.720      1 -total
+ 13.48%    7.378      1 Template:Userdocnavi/bg
+ 13.19%    7.218    228 Template:MenuCommand
+ 11.35%    6.208     11 Template:Value
+  9.31%    5.096      3 Template:PropertyView
+  5.90%    3.228     41 Template:Version
+  5.09%    2.786     11 Template:Incode
+  4.36%    2.387      1 Template:Navigation_menu_2
+  3.94%    2.158      3 Template:Variable
+  3.76%    2.058      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126140244 and revision id 1744378. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126140514 and revision id 1744380. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
