--- a/wiki/bg/Import_Export.html
+++ b/wiki/bg/Import_Export.html
@@ -22,7 +22,9 @@
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../bg/Online_Help_Toc.html" title="Online Help Toc/bg">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
 <p>This page lists the various file formats that FreeCAD can import and export. For completeness the FreeCAD native format is included in the list. Some formats have a related wiki page that can be reached by clicking on the extension in the first column.
 </p>
 <h2><span class="mw-headline" id="Related">Related</span></h2>
@@ -1253,13 +1255,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126162320
+Cached time: 20260126162326
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [no&#8208;toc]
-CPU time usage: 0.123 seconds
-Real time usage: 0.170 seconds
-Preprocessor visited node count: 131/1000000
+CPU time usage: 0.103 seconds
+Real time usage: 0.197 seconds
+Preprocessor visited node count: 132/1000000
 Post&#8208;expand include size: 7006/2097152 bytes
 Template argument size: 2229/2097152 bytes
 Highest expansion depth: 5/100
@@ -1269,13 +1271,13 @@ Unstrip post&#8208;expand size: 3129/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.179      1 -total
- 65.17%    8.589      1 Template:Userdocnavi/bg
- 32.60%    4.296      2 Template:Docnav
- 23.23%    3.062      1 Template:Navigation_menu_2
+100.00%   12.503      1 -total
+ 66.95%    8.371      1 Template:Userdocnavi/bg
+ 29.71%    3.715      2 Template:Docnav
+ 19.96%    2.496      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126162320 and revision id 1744382. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126162325 and revision id 1744385. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
