--- a/wiki/bg/Import_Export.html
+++ b/wiki/bg/Import_Export.html
@@ -25,7 +25,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
-<p>This page lists the various file formats that FreeCAD can import and export. For completeness the FreeCAD native format is included in the list. Some formats have a related wiki page that can be reached by clicking on the extension in the first column.
+<p>&#1058;&#1072;&#1079;&#1080; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; &#1080;&#1079;&#1073;&#1088;&#1086;&#1103;&#1074;&#1072; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1092;&#1072;&#1081;&#1083;&#1086;&#1074;&#1080; &#1092;&#1086;&#1088;&#1084;&#1072;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; FreeCAD &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1080;&#1084;&#1087;&#1086;&#1088;&#1090;&#1080;&#1088;&#1072; &#1080; &#1077;&#1082;&#1089;&#1087;&#1086;&#1088;&#1090;&#1080;&#1088;&#1072;. &#1047;&#1072; &#1087;&#1098;&#1083;&#1085;&#1086;&#1090;&#1072; &#1080; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1097;&#1080;&#1103; &#1089;&#1077; &#1092;&#1086;&#1088;&#1084;&#1072;&#1090; &#1085;&#1072; FreeCAD &#1077; &#1074;&#1082;&#1083;&#1102;&#1095;&#1077;&#1085; &#1074; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082;&#1072;. &#1053;&#1103;&#1082;&#1086;&#1080; &#1092;&#1086;&#1088;&#1084;&#1072;&#1090;&#1080; &#1080;&#1084;&#1072;&#1090; &#1089;&#1074;&#1098;&#1088;&#1079;&#1072;&#1085;&#1072; &#1091;&#1080;&#1082;&#1080; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072;, &#1082;&#1086;&#1103;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1076;&#1086;&#1089;&#1090;&#1080;&#1075;&#1085;&#1072;&#1090;&#1072;, &#1082;&#1072;&#1090;&#1086; &#1082;&#1083;&#1080;&#1082;&#1085;&#1077;&#1090;&#1077; &#1074;&#1098;&#1088;&#1093;&#1091; &#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086; &#1074; &#1087;&#1098;&#1088;&#1074;&#1072;&#1090;&#1072; &#1082;&#1086;&#1083;&#1086;&#1085;&#1072;.
 </p>
 <h2><span class="mw-headline" id="Related">Related</span></h2>
 <p>See the following pages for additional information:
@@ -1255,12 +1255,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126162326
+Cached time: 20260126162500
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [no&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.197 seconds
+CPU time usage: 0.122 seconds
+Real time usage: 0.179 seconds
 Preprocessor visited node count: 132/1000000
 Post&#8208;expand include size: 7006/2097152 bytes
 Template argument size: 2229/2097152 bytes
@@ -1271,13 +1271,13 @@ Unstrip post&#8208;expand size: 3129/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.503      1 -total
- 66.95%    8.371      1 Template:Userdocnavi/bg
- 29.71%    3.715      2 Template:Docnav
- 19.96%    2.496      1 Template:Navigation_menu_2
+100.00%   10.299      1 -total
+ 69.95%    7.204      1 Template:Userdocnavi/bg
+ 30.27%    3.117      1 Template:Navigation_menu_2
+ 26.56%    2.736      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126162325 and revision id 1744385. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126162459 and revision id 1744387. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
