--- a/wiki/bg/Import_Export.html
+++ b/wiki/bg/Import_Export.html
@@ -11,7 +11,7 @@
 <li><a href="../pt-br/Import_Export.html" class="mw-pt-progress mw-pt-progress--med" title="Importar Exportar (44% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Import_Export.html" class="mw-pt-progress mw-pt-progress--low" title="Import Export (11% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../cs/Import_Export.html" class="mw-pt-progress mw-pt-progress--med" title="Import Export (22% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Import_Export.html" class="mw-pt-progress mw-pt-progress--high" title="&#1048;&#1084;&#1087;&#1086;&#1088;&#1090; &#1080; &#1101;&#1082;&#1089;&#1087;&#1086;&#1088;&#1090; (89% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Import_Export.html" class="mw-pt-progress mw-pt-progress--low" title="&#23548;&#20837;&#23548;&#20986; (11% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Import_Export.html" class="mw-pt-progress mw-pt-progress--med" title="&#12452;&#12531;&#12509;&#12540;&#12488;&#12539;&#12456;&#12463;&#12473;&#12509;&#12540;&#12488; (33% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -33,7 +33,9 @@
 </p>
 <ul><li><a href="../Import_Export_Preferences.html" title="Import Export Preferences">Import Export Preferences</a></li>
 <li><a href="../FreeCAD_Howto_Import_Export.html" title="FreeCAD Howto Import Export">FreeCAD Howto Import Export</a></li></ul>
-<h2><span class="mw-headline" id="Overview_of_file_formats">Overview of file formats</span></h2>
+<p><span id="Overview_of_file_formats"></span>
+</p>
+<h2><span id=".D0.9F.D1.80.D0.B5.D0.B3.D0.BB.D0.B5.D0.B4_.D0.BD.D0.B0_.D1.84.D0.B0.D0.B9.D0.BB.D0.BE.D0.B2.D0.B8.D1.82.D0.B5_.D1.84.D0.BE.D1.80.D0.BC.D0.B0.D1.82.D0.B8"></span><span class="mw-headline" id="&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;_&#1085;&#1072;_&#1092;&#1072;&#1081;&#1083;&#1086;&#1074;&#1080;&#1090;&#1077;_&#1092;&#1086;&#1088;&#1084;&#1072;&#1090;&#1080;">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1092;&#1072;&#1081;&#1083;&#1086;&#1074;&#1080;&#1090;&#1077; &#1092;&#1086;&#1088;&#1084;&#1072;&#1090;&#1080;</span></h2>
 <table class="wikitable">
 <tbody><tr>
 <th>Format
@@ -1256,29 +1258,29 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126162604
+Cached time: 20260126162630
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [no&#8208;toc]
-CPU time usage: 0.123 seconds
-Real time usage: 0.166 seconds
-Preprocessor visited node count: 133/1000000
+CPU time usage: 0.105 seconds
+Real time usage: 0.151 seconds
+Preprocessor visited node count: 134/1000000
 Post&#8208;expand include size: 7006/2097152 bytes
 Template argument size: 2229/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3129/5000000 bytes
+Unstrip post&#8208;expand size: 3130/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.778      1 -total
- 74.05%    6.500      1 Template:Userdocnavi/bg
- 31.69%    2.782      1 Template:Navigation_menu_2
- 22.66%    1.989      2 Template:Docnav
+100.00%    9.087      1 -total
+ 70.05%    6.365      1 Template:Userdocnavi/bg
+ 30.56%    2.777      1 Template:Navigation_menu_2
+ 26.76%    2.432      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126162604 and revision id 1744391. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126162630 and revision id 1744393. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
