--- a/wiki/it/Macros_recipes.html
+++ b/wiki/it/Macros_recipes.html
@@ -55,9 +55,7 @@
 <h3><span class="mw-headline" id="Codice_e_scripting"><span typeof="mw:File"><a href="../index.php?title=Applications-python.svg&amp;filetimestamp=20250123011430&amp;.html" class="mw-file-description"><img src="../File/Applications-python.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Codice e scripting</span></h3>
 <div class="mw-collapsible-content">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Text-x-python.png&amp;filetimestamp=20121224162851&amp;.html" class="mw-file-description"><img src="../File/Text-x-python.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../it/FreeCAD_Manual_Converter.html" title="FreeCAD Manual Converter/it">FreeCAD Manual Converter</a></span>: script Python che genera automaticamente le versioni PDF ed EPUB del <a href="../it/Manual;Introduction.html" title="Manual:Introduction/it">Manuale di FreeCAD</a>.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Build_Utility.png&amp;filetimestamp=20240210201103&amp;.html" class="mw-file-description"><img src="../File/Macro_Build_Utility.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Build_Utility.html" title="Macro Build Utility">Macro Build Utility</a></span>: This macro provides a utility to assemble a project from sub-project files using the Merge Project facility.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Build_Utility.png&amp;filetimestamp=20240210201103&amp;.html" class="mw-file-description"><img src="../File/Macro_Build_Utility.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Macro_Build_Utility/IT&amp;action=edit&amp;redlink=1.html" class="new" title="Macro Build Utility/IT (page does not exist)">Macro Build Utility</a></span>: questa macro fornisce un'utilit&agrave; per assemblare un progetto da file di sottoprogetto utilizzando la funzione Unisci progetto.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_clone_explicit.png&amp;filetimestamp=20190614140456&amp;.html" class="mw-file-description"><img src="../File/Macro_clone_explicit.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_clone_explicit.html" title="Macro clone explicit">Macro clone explicit</a></span>: Creates a copy of each selected object and sets its properties to an expression linking to the original object, making it an explicit and editable clone.</li></ul>
 </div>
@@ -858,15 +856,15 @@
 <li>Nella scheda <b>Barra degli strumenti</b>, creare una nuova barra degli strumenti e aggiungere la macro, prendendola dalla categoria <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260126134550
+Cached time: 20260126162641
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.614 seconds
-Real time usage: 0.965 seconds
-Preprocessor visited node count: 3078/1000000
-Post&#8208;expand include size: 27139/2097152 bytes
-Template argument size: 14517/2097152 bytes
+CPU time usage: 0.583 seconds
+Real time usage: 0.842 seconds
+Preprocessor visited node count: 3077/1000000
+Post&#8208;expand include size: 27142/2097152 bytes
+Template argument size: 14520/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -874,14 +872,14 @@ Unstrip post&#8208;expand size: 1952/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.750      1 -total
- 43.21%   15.016    219 Template:MacroLink
-  8.14%    2.827      3 Template:Button
-  8.11%    2.819      6 Template:MenuCommand
-  5.95%    2.067      1 Template:TOCright
+100.00%   27.866      1 -total
+ 43.66%   12.167    219 Template:MacroLink
+  8.06%    2.246      6 Template:MenuCommand
+  5.77%    1.608      3 Template:Button
+  5.08%    1.416      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126134549 and revision id 1744328. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126162640 and revision id 1744395. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
