--- a/wiki/it/Macros_recipes.html
+++ b/wiki/it/Macros_recipes.html
@@ -56,9 +56,7 @@
 <div class="mw-collapsible-content">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Text-x-python.png&amp;filetimestamp=20121224162851&amp;.html" class="mw-file-description"><img src="../File/Text-x-python.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../it/FreeCAD_Manual_Converter.html" title="FreeCAD Manual Converter/it">FreeCAD Manual Converter</a></span>: script Python che genera automaticamente le versioni PDF ed EPUB del <a href="../it/Manual;Introduction.html" title="Manual:Introduction/it">Manuale di FreeCAD</a>.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Build_Utility.png&amp;filetimestamp=20240210201103&amp;.html" class="mw-file-description"><img src="../File/Macro_Build_Utility.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Macro_Build_Utility/IT&amp;action=edit&amp;redlink=1.html" class="new" title="Macro Build Utility/IT (page does not exist)">Macro Build Utility</a></span>: questa macro fornisce un'utilit&agrave; per assemblare un progetto da file di sottoprogetto utilizzando la funzione Unisci progetto.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_clone_explicit.png&amp;filetimestamp=20190614140456&amp;.html" class="mw-file-description"><img src="../File/Macro_clone_explicit.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_clone_explicit.html" title="Macro clone explicit">Macro clone explicit</a></span>: Creates a copy of each selected object and sets its properties to an expression linking to the original object, making it an explicit and editable clone.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_clone_explicit.png&amp;filetimestamp=20190614140456&amp;.html" class="mw-file-description"><img src="../File/Macro_clone_explicit.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Macro_clone_explicit/IT&amp;action=edit&amp;redlink=1.html" class="new" title="Macro clone explicit/IT (page does not exist)">Macro clone explicit</a></span>: crea una copia di ciascun oggetto selezionato e imposta le sue propriet&agrave; su un'espressione collegata all'oggetto originale, rendendolo un clone esplicito e modificabile.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Editor_Assistant_Icon.svg&amp;filetimestamp=20220406203443&amp;.html" class="mw-file-description"><img src="../File/Editor_Assistant_Icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Editor_Assistant.html" title="Macro Editor Assistant">Macro Editor Assistant</a></span>: Extends the capabilities of FreeCAD's integrated Python editor.</li></ul>
 </div>
@@ -856,15 +854,15 @@
 <li>Nella scheda <b>Barra degli strumenti</b>, creare una nuova barra degli strumenti e aggiungere la macro, prendendola dalla categoria <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260126162641
+Cached time: 20260126162712
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.583 seconds
-Real time usage: 0.842 seconds
-Preprocessor visited node count: 3077/1000000
-Post&#8208;expand include size: 27142/2097152 bytes
-Template argument size: 14520/2097152 bytes
+CPU time usage: 0.645 seconds
+Real time usage: 0.877 seconds
+Preprocessor visited node count: 3076/1000000
+Post&#8208;expand include size: 27145/2097152 bytes
+Template argument size: 14523/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -872,14 +870,14 @@ Unstrip post&#8208;expand size: 1952/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.866      1 -total
- 43.66%   12.167    219 Template:MacroLink
-  8.06%    2.246      6 Template:MenuCommand
-  5.77%    1.608      3 Template:Button
-  5.08%    1.416      1 Template:TOCright
+100.00%   34.241      1 -total
+ 37.90%   12.979    219 Template:MacroLink
+  9.46%    3.239      6 Template:MenuCommand
+  6.69%    2.289      3 Template:Button
+  5.09%    1.742      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126162640 and revision id 1744395. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126162711 and revision id 1744397. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
