--- a/wiki/it/Macros_recipes.html
+++ b/wiki/it/Macros_recipes.html
@@ -57,9 +57,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Text-x-python.png&amp;filetimestamp=20121224162851&amp;.html" class="mw-file-description"><img src="../File/Text-x-python.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../it/FreeCAD_Manual_Converter.html" title="FreeCAD Manual Converter/it">FreeCAD Manual Converter</a></span>: script Python che genera automaticamente le versioni PDF ed EPUB del <a href="../it/Manual;Introduction.html" title="Manual:Introduction/it">Manuale di FreeCAD</a>.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Build_Utility.png&amp;filetimestamp=20240210201103&amp;.html" class="mw-file-description"><img src="../File/Macro_Build_Utility.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_Build_Utility.html" title="Macro Build Utility/it">Macro Build Utility</a></span>: questa macro fornisce un'utilit&agrave; per assemblare un progetto da file di sottoprogetto utilizzando la funzione Unisci progetto.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_clone_explicit.png&amp;filetimestamp=20190614140456&amp;.html" class="mw-file-description"><img src="../File/Macro_clone_explicit.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Macro_clone_explicit/it&amp;action=edit&amp;redlink=1.html" class="new" title="Macro clone explicit/it (page does not exist)">Macro clone explicit</a></span>: crea una copia di ciascun oggetto selezionato e imposta le sue propriet&agrave; su un'espressione collegata all'oggetto originale, rendendolo un clone esplicito e modificabile.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Editor_Assistant_Icon.svg&amp;filetimestamp=20220406203443&amp;.html" class="mw-file-description"><img src="../File/Editor_Assistant_Icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Editor_Assistant.html" title="Macro Editor Assistant">Macro Editor Assistant</a></span>: Extends the capabilities of FreeCAD's integrated Python editor.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Editor_Assistant_Icon.svg&amp;filetimestamp=20220406203443&amp;.html" class="mw-file-description"><img src="../File/Editor_Assistant_Icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Macro_Editor_Assistant/it&amp;action=edit&amp;redlink=1.html" class="new" title="Macro Editor Assistant/it (page does not exist)">AsMacro Editor Assistant</a></span>: estende le capacit&agrave; dell'editor Python integrato di FreeCAD.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Global_Variable_Watcher.png&amp;filetimestamp=20240210201119&amp;.html" class="mw-file-description"><img src="../File/Macro_Global_Variable_Watcher.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Global_Variable_Watcher.html" title="Macro Global Variable Watcher">Macro Global Variable Watcher</a></span>: This macro facilitates the user selecting global variables and monitoring their values.</li></ul>
 </div>
@@ -854,15 +852,15 @@
 <li>Nella scheda <b>Barra degli strumenti</b>, creare una nuova barra degli strumenti e aggiungere la macro, prendendola dalla categoria <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260126162728
+Cached time: 20260126162753
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.572 seconds
-Real time usage: 0.725 seconds
-Preprocessor visited node count: 3076/1000000
-Post&#8208;expand include size: 27145/2097152 bytes
-Template argument size: 14523/2097152 bytes
+CPU time usage: 0.591 seconds
+Real time usage: 0.805 seconds
+Preprocessor visited node count: 3075/1000000
+Post&#8208;expand include size: 27150/2097152 bytes
+Template argument size: 14528/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -870,14 +868,14 @@ Unstrip post&#8208;expand size: 1952/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.717      1 -total
- 43.45%   12.912    219 Template:MacroLink
-  8.34%    2.478      6 Template:MenuCommand
-  4.40%    1.307      3 Template:Button
-  4.01%    1.193      1 Template:TOCright
+100.00%   28.830      1 -total
+ 44.46%   12.819    219 Template:MacroLink
+  6.40%    1.844      6 Template:MenuCommand
+  4.52%    1.303      1 Template:TOCright
+  4.10%    1.183      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126162727 and revision id 1744401. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126162752 and revision id 1744403. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
