--- a/wiki/it/Macros_recipes.html
+++ b/wiki/it/Macros_recipes.html
@@ -3,7 +3,7 @@
 <li><a href="../Macros_recipes.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macros recipes (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="Macros recipes (1% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--complete" title="Liste des macros (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--complete" title="Przepisy na makropolecenia (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../sv/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="Macros recipes (0% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="../cs/Macros_recipes.html" class="mw-pt-progress mw-pt-progress--low" title="Makro n&aacute;vody (1% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
@@ -61,9 +61,7 @@
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_Global_Variable_Watcher.png&amp;filetimestamp=20240210201119&amp;.html" class="mw-file-description"><img src="../File/Macro_Global_Variable_Watcher.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_Global_Variable_Watcher.html" title="Macro Global Variable Watcher">Macro Global Variable Watcher</a></span>: This macro facilitates the user selecting global variables and monitoring their values.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_MessageBox.png&amp;filetimestamp=20190614145634&amp;.html" class="mw-file-description"><img src="../File/Macro_MessageBox.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_MessageBox.html" title="Macro MessageBox">Macro MessageBox</a></span>: Shows how to give information to the user through the GUI.</li></ul>
-</div>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_MessageBox.png&amp;filetimestamp=20190614145634&amp;.html" class="mw-file-description"><img src="../File/Macro_MessageBox.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Macro_MessageBox.html" title="Macro MessageBox/it">Macro MessageBox</a></span>: Mostra come fornire informazioni all'utente tramite la GUI.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Packages_icon.svg&amp;filetimestamp=20250118215208&amp;.html" class="mw-file-description"><img src="../File/Packages_icon.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="80" data-file-height="80"></a></span> <a href="../Macro_Packages.html" title="Macro Packages">Macro Packages</a></span>: Pip frontend for installing pypi packages into the FreeCAD environment.</li></ul>
 </div>
@@ -852,15 +850,15 @@
 <li>Nella scheda <b>Barra degli strumenti</b>, creare una nuova barra degli strumenti e aggiungere la macro, prendendola dalla categoria <b>Macros</b>.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260126162753
+Cached time: 20260126162828
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.591 seconds
-Real time usage: 0.805 seconds
-Preprocessor visited node count: 3075/1000000
-Post&#8208;expand include size: 27150/2097152 bytes
-Template argument size: 14528/2097152 bytes
+CPU time usage: 0.529 seconds
+Real time usage: 1.045 seconds
+Preprocessor visited node count: 3074/1000000
+Post&#8208;expand include size: 27153/2097152 bytes
+Template argument size: 14531/2097152 bytes
 Highest expansion depth: 3/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -868,14 +866,14 @@ Unstrip post&#8208;expand size: 1952/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.830      1 -total
- 44.46%   12.819    219 Template:MacroLink
-  6.40%    1.844      6 Template:MenuCommand
-  4.52%    1.303      1 Template:TOCright
-  4.10%    1.183      3 Template:Button
+100.00%   38.536      1 -total
+ 42.53%   16.390    219 Template:MacroLink
+ 13.86%    5.342      6 Template:MenuCommand
+ 12.58%    4.847      3 Template:Button
+  4.48%    1.726      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126162752 and revision id 1744403. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2321-0!canonical and timestamp 20260126162827 and revision id 1744405. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
