Created page with "Questa macro invia l'oggetto attualmente selezionato (mesh, forma o corpo) al sito web PCBWay [https://pcbway.com] per ottenere un preventivo immediato per la produzione tramite fresatura CNC, taglio laser o stampa 3D. Dopo l'invio dell'oggetto, verrà aperta una pagina sul sito web PCBWay per consentire all'utente di modificare dettagli e opzioni."

--- a/wiki/it/Macro_PCBWay.html
+++ b/wiki/it/Macro_PCBWay.html
@@ -75,10 +75,8 @@ Macro PCBWay
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This macro sends the currently selected object (mesh, shape or body) to the <a rel="nofollow" class="external text" href="https://pcbway.com">PCBWay website</a> to get an instant quote for manufacturing through CNC milling, laser cutting or 3D printing. After the object is sent, a page will be opened on the PCBWay website to allow the user to adjust details and options.
+<p>Questa macro invia l'oggetto attualmente selezionato (mesh, forma o corpo) al sito web PCBWay <a rel="nofollow" class="external autonumber" href="https://pcbway.com">[1]</a> per ottenere un preventivo immediato per la produzione tramite fresatura CNC, taglio laser o stampa 3D. Dopo l'invio dell'oggetto, verr&agrave; aperta una pagina sul sito web PCBWay per consentire all'utente di modificare dettagli e opzioni.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>Note</b>: Mesh-based objects can only be manufactured through 3D printing. For CNC milling or laser cutting, you must use shape-based objects.
 </p>
@@ -302,13 +300,13 @@ def main():
     #        QtGui.QMessageBox.Yes</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126162934
+Cached time: 20260126162951
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.128 seconds
-Preprocessor visited node count: 125/1000000
+CPU time usage: 0.043 seconds
+Real time usage: 0.064 seconds
+Preprocessor visited node count: 124/1000000
 Post&#8208;expand include size: 2952/2097152 bytes
 Template argument size: 7619/2097152 bytes
 Highest expansion depth: 5/100
@@ -318,15 +316,15 @@ Unstrip post&#8208;expand size: 8798/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.694      1 -total
- 37.88%   10.491      1 Template:MacroCode
- 20.87%    5.780      1 Template:Macro/it
- 19.25%    5.331      1 Template:Codeextralink
- 11.57%    3.205      2 Template:MenuCommand
-  8.81%    2.440      1 Template:Button
+100.00%   17.174      1 -total
+ 28.18%    4.839      1 Template:Macro/it
+ 22.02%    3.782      1 Template:Codeextralink
+ 20.16%    3.462      1 Template:MacroCode
+ 14.14%    2.429      2 Template:MenuCommand
+ 11.46%    1.968      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260126162934 and revision id 1744409. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260126162950 and revision id 1744411. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
