Created page with "== Pagina nuova macro =="

--- a/wiki/it/Macro_documentation.html
+++ b/wiki/it/Macro_documentation.html
@@ -14,10 +14,9 @@
 </p><p>La pagina della <a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a> contiene una buona selezione di macro create da utenti esperti e molte di esse possono essere installate direttamente da <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>.
 </p><p>Consultare <a href="../it/GuiCommand_model.html" title="GuiCommand model/it">modello GuiCommand</a> e pagine macro come <a href="../it/Macro_Loft.html" title="Macro Loft/it">Macro Loft</a> e <a href="../it/Macro_Site_From_Contours.html" title="Macro Site From Contours/it">Macro Site From Contours</a> per informazioni su come documentare le macro. &Egrave; necessario includere almeno due sezioni: una sezione <i>Descrizione</i> con informazioni generali sull'utilizzo e una sezione <i>Script</i> per contenere il codice macro vero e proprio. &Egrave; possibile includere altre sezioni, se necessario, per spiegare in modo pi&ugrave; dettagliato l'utilizzo della macro.
 </p><p>Se una macro fornisce una funzionalit&agrave; ben definita ed &egrave; ben documentata, potrebbe essere inclusa in futuro come parte di un <a href="../it/Workbenches.html" title="Workbenches/it">ambiente di lavoro</a> nuovo o esistente.
+</p><p><span id="New_macro_page"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="New_macro_page">New macro page</span></h2>
-</div>
+<h2><span class="mw-headline" id="Pagina_nuova_macro">Pagina nuova macro</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The original page must be written in English. After one of the administrators has marked it for translation, it can be translated into another language.
 </p>
@@ -286,12 +285,12 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126165842
+Cached time: 20260126165904
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.058 seconds
-Real time usage: 0.084 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.107 seconds
 Preprocessor visited node count: 337/1000000
 Post&#8208;expand include size: 2987/2097152 bytes
 Template argument size: 2042/2097152 bytes
@@ -302,18 +301,18 @@ Unstrip post&#8208;expand size: 10021/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.501      1 -total
- 16.81%    2.606      1 Template:ColoredParagraph
- 16.65%    2.581      5 Template:Code
- 15.01%    2.327      1 Template:Codeextralink
-  9.66%    1.497      1 Template:TOCright
-  9.20%    1.426      7 Template:Incode
-  8.51%    1.319      1 Template:Caption
-  7.86%    1.219      4 Template:Emphasis
-  7.35%    1.139      1 Template:MenuCommand
+100.00%   21.488      1 -total
+ 20.48%    4.402      5 Template:Code
+ 11.64%    2.502      1 Template:ColoredParagraph
+ 10.95%    2.352      1 Template:Codeextralink
+ 10.59%    2.276      1 Template:Caption
+  9.79%    2.103      7 Template:Incode
+  9.24%    1.986      1 Template:MenuCommand
+  8.59%    1.846      4 Template:Emphasis
+  8.43%    1.812      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165842 and revision id 1744434. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165904 and revision id 1744436. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
